# FaceRecognition

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
face_pipeline/: CMakeLists.txt
face_pipeline/include/face_pipeline/: face_aligner.h  face_detector.h  face_embedder.h  face_pipeline.h  iou_tracker.h  motion_detector.h  result_sink.h  types.h
face_pipeline/src/: face_aligner.cpp  face_detector.cpp  face_embedder.cpp  face_pipeline.cpp  iou_tracker.cpp  motion_detector.cpp  result_sink.cpp
libfacedetection/: CMakeLists.txt
libfacedetection/include/: facedetectcnn.h
models/: README.md
network_camera_receiver/: CMakeLists.txt
network_camera_receiver/include/: network_camera_receiver.h
network_camera_receiver/src/: network_camera_receiver.cpp
tests/: CMakeLists.txt  face_pipeline_tests.cpp
